--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform-Exec"
+    name: "Terraform-Exec 🚀"
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -36,5 +36,5 @@ jobs:
         run: |
           terraform init
           terraform plan
-          terraform apply -auto-approve
-          # terraform destroy -auto-approve
+          # terraform apply -auto-approve
+          terraform destroy -auto-approve
