--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,5 +32,5 @@ jobs:
         run: |
           terraform init
           terraform plan
-          # terraform apply -auto-approve
-          terraform destroy -auto-approve
+          terraform apply -auto-approve
+          # terraform destroy -auto-approve
